# dmsuite

./: .gitignore  README.md  README.rst  __init__.py  dmsuite.py  justfile  pyproject.toml  setup.py  tox.ini
dmsuite/: __init__.py  cheb_bc.py  examples.py  interp.py  non_poly_diff.py  poly_diff.py  roots.py
examples/: chebyshev.py  laguerre.py
tests/: test_cheb2bc.py  test_cheb4c.py  test_chebdif.py  test_chebint.py  test_fourdif.py  test_herdif.py  test_herroots.py  test_lagdif.py  test_lagroots.py  test_legroots.py  test_orrsom.py  test_poldif.py  test_polydiff.py  test_sincdif.py
tests/data/: cheb2bc1_5.npy  cheb2bc1_5_0.npy  cheb2bc1_5_1.npy  cheb2bc1_5_2.npy  cheb2bc1_5_3.npy  cheb2bc1_5_4.npy  cheb2bc2_5_0.npy  cheb2bc2_5_1.npy  cheb2bc2_5_2.npy  cheb2bc2_5_3.npy  cheb2bc2_5_4.npy  cheb2bc3_5_0.npy  cheb2bc3_5_1.npy  cheb2bc3_5_2.npy  cheb2bc3_5_3.npy  cheb2bc3_5_4.npy  cheb2bc4_5_0.npy  cheb2bc4_5_1.npy  cheb2bc4_5_2.npy  cheb2bc4_5_3.npy  cheb2bc4_5_4.npy  cheb4c9_0.npy  cheb4c9_1.npy  chebdif4.npy  chebint6.npy  fourdif4-3_0.npy  fourdif4-3_1.npy  herdif4.npy  herroots10.npy  lagdif4.npy  lagroots10.npy  legroots10.npy  orrsom_32-1e4.npy  poldif1_5.npy  sincdif_4_2_1.npy
