[build-system]
requires = ["setuptools>=61", "setuptools_scm>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmsuite"
dynamic = ["version"]
description = "Differentiation matrices"
readme = "README.rst"
authors = [
    {name = "Adrien Morison", email = "adrien.morison@gmail.com"},
    {name = "Stéphane Labrosse"},
]
maintainers = [
    {name = "Adrien Morison", email = "adrien.morison@gmail.com"},
    {name = "Stéphane Labrosse"},
]
license = {file = "LICENSE"}
urls = {homepage = "https://github.com/labrosse/dmsuite"}
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
]

[tool.setuptools.packages.find]
include = ["dmsuite"]
namespaces = false

[tool.setuptools.package-data]
dmsuite = ["py.typed"]

[tool.setuptools_scm]
write_to = "dmsuite/_version.py"

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
]
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.2",
    "ruff>=0.6.2",
]
